--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f784d135250&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2b651ef890&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f784ce4f4d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f784ce4f6d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2b64f09310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2b64f09510&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f784d3aee90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f784d3b90d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2b65468b90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2b65468d90&gt;]</pre>
 </div>
 
 </div>
