--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9c166ddc50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd1f7a90b10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9c163fc610&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9c163fc810&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd1f77ba590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd1f77ba790&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9c16954e50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9c16960090&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd1f7d18dd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd1f7d18fd0&gt;]</pre>
 </div>
 
 </div>
