--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fef3fc8ca50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe5849ac790&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fef3f992550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fef3f992750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe584a145d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe584a147d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fef3feffe50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fef3ff0a090&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe584f6be90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe584f760d0&gt;]</pre>
 </div>
 
 </div>
