--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb771603190&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f277e504090&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb77163a550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb77163a750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f277e210350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f277e210550&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb771890e10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb771890fd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f277eab0b90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f277eab0d90&gt;]</pre>
 </div>
 
 </div>
