--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff238ad7e50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fdc7829eed0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff2387f7ad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff2387f7dd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fdc782d9510&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fdc782d3c10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff238d9e310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff238d66d10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fdc788b0950&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fdc78849d10&gt;]</pre>
 </div>
 
 </div>
