--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f30cd0a7750&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fca589539d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f30ccd8b390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f30ccd8b5d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fca58984410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fca58984610&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f30cd2f8c90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f30cd2f8ed0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fca58effd10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fca58efff10&gt;]</pre>
 </div>
 
 </div>
