--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3caf72fb90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2bdf7e5c10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3caf79f510&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3caf475050&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2bdf817a90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2bdf817610&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3cafcfed90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3cafcfef90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2bdfd86ad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2bdfd86cd0&gt;]</pre>
 </div>
 
 </div>
