--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2bdf7e5c10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f166f2583d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2bdf817a90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2bdf817610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f166ef13310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f166ef13550&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2bdfd86ad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2bdfd86cd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f166f4d2b50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f166f4d2d90&gt;]</pre>
 </div>
 
 </div>
