--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4d04ef9650&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f48d0cbdbd0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4d04f2b350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4d04f2b550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f48cfe0d490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f48cfe0d690&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4d054a5c90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4d054a5e90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f48d0386d10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f48d0386f10&gt;]</pre>
 </div>
 
 </div>
