--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5b5a5f30d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe947e8a750&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5b5a616410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5b5a616610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe947ecc610&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe947ecc810&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5b5abe9550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5b5ab91e90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe948429e90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe9484340d0&gt;]</pre>
 </div>
 
 </div>
