--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5eb1734350&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff94c3d8050&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5eb178fe90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5eb178f690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff94c40a210&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff94c40a410&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5eb1d07990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5eb1d07b90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff94c984b90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff94c984d90&gt;]</pre>
 </div>
 
 </div>
