--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f85d85a2c90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe0189c3750&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f85d85e6450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f85d85d2590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe018a03590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe018a03790&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f85d8b43cd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f85d8b4ce10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe018f5fd90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe018f5ff90&gt;]</pre>
 </div>
 
 </div>
