--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe0189c3750&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe14d4d0310&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe018a03590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe018a03790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe14d516410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe14d516610&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe018f5fd90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe018f5ff90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe14da90cd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe14da90ed0&gt;]</pre>
 </div>
 
 </div>
