--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2d2e3e7ed0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2b17093e90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2d2ddc1310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2d2ddc1510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2b16da9090&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2b16d9fcd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2d2e66dc10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2d2e66de10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2b173079d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2b17310e90&gt;]</pre>
 </div>
 
 </div>
