--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff53740cbd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f05d494aa90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff537449510&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff537449710&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f05d4317510&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f05d4317710&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff537699d50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff537699f50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f05d4875e50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f05d4880090&gt;]</pre>
 </div>
 
 </div>
