--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f51f232f690&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fad6f388690&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f51f2362750&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f51f2362910&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fad6f3cd410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fad6f3cd650&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f51f28d9f50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f51f28e7150&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fad6f93add0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fad6f93afd0&gt;]</pre>
 </div>
 
 </div>
