--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fdb46e2fd50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc787250e50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fdb46b9e2d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fdb46b9e4d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc7875bd450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc7875bd650&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fdb47117bd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fdb47117dd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc78781cd50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc78781cf50&gt;]</pre>
 </div>
 
 </div>
